[gd_scene load_steps=5 format=2]

[ext_resource path="res://OxygenBar.gd" type="Script" id=1]
[ext_resource path="res://ui/common/pewpew_hpbar_foreground.png" type="Texture" id=2]
[ext_resource path="res://ui/common/pewpew_hpbar_bg.png" type="Texture" id=3]
[ext_resource path="res://ui/common/pewpew_hpbar_over.png" type="Texture" id=4]

[node name="OxygenBar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OxygenDelayedStatus" type="TextureProgress" parent="."]
margin_right = 64.0
margin_bottom = 16.0
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
tint_progress = Color( 0.172549, 0.12549, 0.721569, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OxygenStatus" type="TextureProgress" parent="."]
margin_right = 64.0
margin_bottom = 16.0
value = 100.0
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 2 )
tint_progress = Color( 0.145098, 0.580392, 0.866667, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OxygenTween" type="Tween" parent="."]
[connection signal="tween_completed" from="OxygenTween" to="." method="_on_OxygenTween_tween_completed"]
